# ccontrol

./: .gitignore  AUTHORS  README  README.markdown  configure.ac
benchs/: Makefile  Makefile.cachelat  Makefile.stencil  README.markdown  cache_latency.c  exp.h
ccontrol/: Makefile.am  README  README.markdown  autogen.sh  ccontrol.pc.in  configure.ac  version.sh
ccontrol/benchs/: Makefile  exp.h  stencil.c
ccontrol/lib/: Makefile  ccontrol.c  ccontrol.h  colorset.h  freelist.c  freelist.h  zone.h
ccontrol/malloc/: Makefile  malloc.c
ccontrol/module/: Makefile  ccontrol.c  detect_cache.sh  module_unload
ccontrol/src/: Makefile.am
ccontrol/src/commons/: Makefile.am  colorset.h  ioctls.h
ccontrol/src/lib/: Makefile.am  ccontrol.c  ccontrol.h  freelist.c  freelist.h  libc_bypass.c
ccontrol/src/module/: Makefile  Makefile.in  ccontrol.c  detect_cache  module_load  module_unload
ccontrol/src/utils/: main.c
ccontrol/tests/: Makefile.am  fl.c  random.c  run_random.sh
src/: Makefile  kmod.c
src/commons/: colorset.h
src/lib/: ccontrol.c  ccontrol.h  freelist.c  freelist.h  libc_bypass.c
src/module/: Makefile.in  ccontrol.c
src/utils/: Makefile.am  main.c
tests/: random.c
web/: index.html  style.css
